# CMakeTemplate

./: .gitignore  CMakeLists.txt  arm-none-eabi-gcc.cmake
CMSIS/: CMakeLists.txt
CMSIS/Device/ST/STM32H7xx/Include/: CMakeLists.txt
device/: CMakeLists.txt  STM32H743ZITX_FLASH.ld  STM32H743ZITX_RAM.ld
src/: CMakeLists.txt  stm32h7xx_hal_msp.c
src/MCAL/: CMakeLists.txt
src/MCAL/src/: gpio.c  main.c  usart.c  usb_otg.c
